objects/ResidentialHistory__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_date__c</fullName>
        <label>From date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Sponsor__c</referenceTo>
        <relationshipLabel>Residential History</relationshipLabel>
        <relationshipName>Residential_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_date__c</fullName>
        <label>To date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Residential History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RH-{0000}</displayFormat>
        <label>Residential History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residential History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>